--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <name>log4j</name>
 
     <properties>
+        <jdk-version>1.8</jdk-version>
     </properties>
 
     <dependencies>
@@ -55,7 +56,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <proc>none</proc>
+                    <source>${jdk-version}</source>
+                    <target>${jdk-version}</target>
                 </configuration>
             </plugin>
         </plugins>
